# credit-risk-analysis-ds

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
dashboard/: app.py
docs/: DIVISAO_TAREFAS.md
models/: model.pkl
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_modeling.ipynb
reports/: relatorio.ipynb
src/: data.py  features.py  models.py
