[project]
name = "credit-risk-analysis-ds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.14.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn==1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "statsmodels>=0.14.0",
    "nbconvert>=7.0.0",
    "playwright>=1.40.0",
]
